fix db, change entities follow db